--- a/style.css
+++ b/style.css
@@ -7,41 +7,67 @@
     padding: 0;
 }
 
+article {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section {
+    flex: 50vw;
+    min-height: 200px;
+}
+
+header, section, nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header, section, nav, main {
+    flex:100%;
+}
+
 
 header {
-    background-color: #fff;
+    background-color: #f1f1f1;
+    min-height: 20px;
     width: 100%;
-    height: 100px;
 }
 
 
 
-header .header-brand {
+.header-brand {
     font-family: 'Catamaran', sans-serif;
     font-size: 24px;
     color: #111;
     font-weight: 900;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px 0;
+    /* display: block; */
+    /* margin: 0 auto; */
+    /* text-align: center; */
+    padding: 10px;
     
 }
 
-header nav ul {
+nav {
+    background-color: #f1f1f1;
+    padding: 1rem;
+    flex: 1;
+}
+
+nav ul {
     display: block;
     margin: 0 auto;
     width: fit-content;
 }
 
-header nav ul li {
+nav ul li {
     display: inline-block;
     list-style: none;
     padding: 0 16px;
     
 }
 
-header nav ul li a {
+nav ul li a {
     font-family: 'Catamaran', sans-serif;
     font-size: 16px;
     color: #111;
