--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@
 
 html {
     font-size: 100%;
-    line-height: 1.5rem;
+    /* line-height: 1.5rem; */
     box-sizing: border-box;
 }
 
@@ -10,7 +10,7 @@ body {
     margin: 0 auto;
     padding: 0;
     min-height: 100vh;
-    max-width: 1400px;
+    /* max-width: 1400px; */
 }
 
 *,
@@ -19,10 +19,10 @@ body {
     box-sizing: inherit;
 }
 
-body {
+/* body {
     min-height: 100vh;
     max-width: 1400px;
-}
+} */
 
 img {
     max-width: 100%;
@@ -38,18 +38,19 @@ img {
     padding: 2rem;
     background: url('Images/office.jpg') no-repeat center;
     background-size: cover;
+    height: 100%;
 
 }
 
 #hero img {
-    width: 15w;
     border-radius: 50%;
+    border: solid 1px white;
 }
 
 #hero h2 {
     font-family: 'Cormorant Garamond', serif;
     color:white;
-    padding: 1.2rem;
+    /* padding: 1.2rem; */
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
@@ -63,6 +64,7 @@ img {
     font-weight: 900;
     text-shadow: 2px 2px 8px #111;
     text-align: center;
+    margin-top: 2em;
 }
 
 .header-nav {
@@ -94,7 +96,7 @@ img {
 }
 
 .nav-item {
-    flex: 1 0 10%;
+    flex: 1 50%;
     text-align: center;
 }
 
@@ -139,7 +141,7 @@ img {
     transform: scale(0.9);
 }
 
-@media (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width:899px) {
     .header-nav {
         line-height:  1.5rem;
     }
@@ -148,12 +150,13 @@ img {
         width: 100%;
     }
 
-    .nav-items {
+    .nav-item {
         flex: 1 0 10%;
+
     }
 }
 
-@media (min-width: 900px) {
+@media screen and (min-width: 900px) {
     .header-nav {
         justify-content: space-between;
         padding: 1rem, 0;
@@ -164,6 +167,10 @@ img {
     }
     .logo {
         margin: 0 0 0 0.3rem;
+    }
+
+    .nav-item {
+        flex: 1 0 10%;
     }
 
 }
@@ -200,7 +207,11 @@ img {
     color: white;
 }
 
-#social-links div div {
+#social-links a{
+    display: inline-block;
+}
+
+#social-links div {
     display: flex;
     justify-content: space-between;
 }
@@ -209,5 +220,5 @@ img {
 
 footer {
     text-align: center;
-    padding: 1rem;
+    width: 100%;
 }
