--- a/style2.css
+++ b/style2.css
@@ -7,9 +7,9 @@ html {
 }
 
 body {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* max-width: 1400px; */
 }
 
