--- a/about.css
+++ b/about.css
@@ -12,6 +12,10 @@
     text-align: left;
 }
 
+.about-content a {
+    text-decoration: none;
+}
+
 .about-content p {
     font-family: sans-serif;
     opacity: 0.7;
@@ -37,6 +41,11 @@ h1 {
     color: #fff;
     font-family: sans-serif;
     font-weight: bold;
+}
+
+.about-content button:hover {
+    background: blue;
+    color: black;
 }
 
 .about-content img {
