--- a/blog.css
+++ b/blog.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     padding: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    background-color: #1f2937;
 }
 
 .blog-heading {
@@ -19,15 +20,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: #ffffff;
 }
 
 .blog-heading span{
-    color: red;
+    color: #ffffff;
 }
 
 .blog-heading h3 {
     font-size: 2.4rem;
-    color: #2b2b2b;
+    color: #ffffff;
     font-weight: 600;
 
 }
@@ -38,6 +40,7 @@
     align-items: center;
     margin: 20px 0px;
     flex-wrap: wrap;
+    background-color: #1f2937;
 }
 
 .blog-box {
