--- a/about.css
+++ b/about.css
@@ -17,7 +17,7 @@
 }
 
 .about-content p {
-    font-family: sans-serif;
+    font-family: 'Cormorant Garamond', serif;;
     opacity: 0.7;
     margin-bottom: 6px;
 }
@@ -27,7 +27,7 @@ h1 {
     font-weight: bold;
     color: #F9fAf8;
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Cormorant Garamond', serif;;
 }
 
 .about-content button {
@@ -53,7 +53,7 @@ h1 {
     height: 400px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 900px) {
    .content {
     display: flex;
     flex-direction: row;
