--- a/style2.css
+++ b/style2.css
@@ -1,16 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;400;700;900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-html {
-    font-size: 100%;
-    /* line-height: 1.5rem; */
-    box-sizing: border-box;
-}
 
 * {
     margin: 0;
     padding: 0;
-    /* min-height: 100vh; */
-    /* max-width: 1400px; */
+    font-size: 100%;
+    box-sizing: border-box;
 }
 
 *,
@@ -19,10 +14,6 @@ html {
     box-sizing: inherit;
 }
 
-/* body {
-    min-height: 100vh;
-    max-width: 1400px;
-} */
 
 img {
     max-width: 100%;
@@ -50,7 +41,6 @@ img {
 #hero h2 {
     font-family: 'Cormorant Garamond', serif;
     color:white;
-    /* padding: 1.2rem; */
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
@@ -117,6 +107,7 @@ img {
     color: #111;
     font-weight: 700;
     font-size: 2rem;
+    font-family: 'Catamaran', sans-serif;
 
 }
 
@@ -221,6 +212,6 @@ img {
 footer {
     text-align: center;
     width: 100%;
-    height: 2.5rem;
+    height: 2rem;
     bottom: 0;
 }
