--- a/src/style2.css
+++ b/src/style2.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+body {
+    height: 100vh;
+}
+
 *,
 *::before,
 *::after {
@@ -214,4 +218,5 @@ footer {
     width: 100%;
     height: 2rem;
     bottom: 0;
+    margin-top: auto;
 }
